monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0144/A0144c.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0144;

grammar A0144c extends A0144a, A0144b {
  // Foo is defined in both a and b
}
